--- a/index.html
+++ b/index.html
@@ -333,12 +333,14 @@ class handlers extends Paged.Handler {
 
 <figure>
 <figcaption>Screenshot of Print Settings in Safari</figcaption>
-<img src="safari.png" class="img-75mm" />
+<center><img src="safari.png" class="img-75mm" /></center>
 </figure>
+
+<br /><br /><br /><br />
 
 <figure>
 <figcaption>Screenshot of Print Settings in Chrome</figcaption>
-<img src="chrome.png" class="img-75mm" />
+<center><img src="chrome.png" class="img-75mm" /></center>
 </figure>
 
 <div class="banner-class">
