--- a/index.html
+++ b/index.html
@@ -58,9 +58,6 @@
 
 <p>This guide provides a basic tutorial to using paged.js, for my own future reference and yours, and I highly recommend you visiting their site and supporting their project. In particular, their <a href="https://www.pagedjs.org/documentation/05-designing-for-print/">documentation</a> covers many aspects of advanced paged media and is a worthwhile next step after reading this guide.</p>
 
-<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-<p style="text-align: right"><i>Guide begins on following page</i></p>
-
 <div class="page-break"></div>
 
 <!-- 3.2 Section 2 - Getting Started -->
@@ -199,8 +196,7 @@ figure:not(.no-counter) {
 
 <p>We can then take this one step further and use CSS to automatically generate text labels to reflect the counters within our sections and figures.</p>
 
-<br /><br /><br /><br /><br />
-<p style="text-align: right"><i>Continues on following page</i></p>
+<div class="page-break"></div>
 
 <figure>
 <figcaption>Code to Auto-Generate Numbering Labels</figcaption>
