--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
 
 <h2 class="no-break">Basic Features</h2>
 
-
-<h3>Page Size</h3>
+<h3 class="top">Page Size</h3>
 <p>Most properties will be captured in CSS as an attribute to the <mark>@page</mark> rule. For example, we can set the page size to A4 with the following. Other valid page sizes include letter, legal, ledged, A0 to A7, A10, B4 and B5.</p>
 
 <code><pre>
@@ -332,7 +331,7 @@ class handlers extends Paged.Handler {
 <center><img src="safari.png" class="img-75mm" /></center>
 </figure>
 
-<br /><br /><br /><br />
+<br /><br />
 
 <figure>
 <figcaption>Screenshot of Print Settings in Chrome</figcaption>
