--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <!-- 3.0 Start of Main Content -->
 
 <!-- Setting the footer -->
-<p class="footer"><a href="#toc-start">Return to Table of Contents</a></p>
+<p class="footer"><a href="#toc-start">Table of Contents</a></p>
 
 <!-- Reseting the header counters (as cover page also uses them) -->
 <div class="counter-reset"></div>
