--- a/index.html
+++ b/index.html
@@ -205,9 +205,7 @@ figcaption:not(.no-counter)::before {
 <p>We can generate formatted headers by first creating the formatted header in our HTML and then changing its position to be <mark>running</mark> to move it to each page's footer:</p>
 
 <code><pre>
-&lt;p class="footer"&gt;
-  &lt;a href="#toc-start"&gt;Return to Table of Contents&lt;/a&gt;
-&lt;/p&gt;
+&lt;p class="footer"&gt;&lt;a href="#toc-start"&gt;Return to Table of Contents&lt;/a&gt;&lt;/p&gt;
 </pre></code>
 
 <code><pre>
