--- a/index.html
+++ b/index.html
@@ -332,10 +332,10 @@ Paged.registerHandlers(handlers);
 @page top-banner {
   @top-left-corner { background-color: #347dbd; content: " ";}
   @top-left {	background-color: #347dbd; content: " ";}
-  @top-center { background-color: #347dbd; 
+  @top-center {
+    background-color: #347dbd; 
     color: white;
-    content: "Sample Banner Text";
-  }
+    content: "Sample Banner Text"; }
   @top-right { background-color: #347dbd;	content: " ";}
   @top-right-corner { background-color: #347dbd; content: " ";}
 }
