--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 }
 </pre></code>
 
-<p>Whilst we will not make use of media queries in the rest of this guide and in the example repo, please do remember them and use them liberally to create distinct views for screen, print and mobile based on your requirements. They are a central component of <a href="https://en.wikipedia.org/wiki/Responsive_web_design">responsive web design</a>, a topic we could dedicate an entire book to, but not one for today.</p>
+<p>Whilst we will not make use of media queries in the rest of this guide and in the example repo, please do remember them and use them liberally to create distinct views for screen, print and mobile based on your requirements. They are a central component of responsive web design, a topic we could dedicate an entire book to, but not one for today.</p>
 
 <!-- 3.3 Section 3 - Basic Features -->
 <h2 class="no-break">Basic Features</h2>
