--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ h2 {
   break-before: page;
 }
 
-
+ 
 h3 {
   string-set: subsection content(text);
 }
@@ -331,14 +331,14 @@ Paged.registerHandlers(handlers);
 <b>In CSS</b>:
 
 @page top-banner {
-  @top-left-corner { background-color: #347dbd; content: " "; }
-  @top-left {	background-color: #347dbd; content: " "; }
+  @top-left-corner { background-color: #445a75; content: " "; }
+  @top-left {	background-color: #445a75; content: " "; }
   @top-center {
-    background-color: #347dbd; 
+    background-color: #445a75; 
     color: white;
     content: "Sample Banner Text"; }
-  @top-right { background-color: #347dbd;	content: " "; }
-  @top-right-corner { background-color: #347dbd; content: " "; }
+  @top-right { background-color: #445a75;	content: " "; }
+  @top-right-corner { background-color: #445a75; content: " "; }
 }
 
 .banner-class { page: top-banner; }
